--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,4 +1,19 @@
 apply plugin: 'java-library'
+apply plugin: 'kotlin'
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
+sourceSets {
+    main.java.srcDirs += 'src/main/kotlin'
+}
 
 dependencies {
     implementation "io.reactivex.rxjava2:rxjava:${rx_java_version}"
@@ -7,5 +22,5 @@ dependencies {
     implementation "javax.inject:javax.inject:${javax_inject_version}"
 
     api "com.jakewharton.timber:timber:${timber_version}"
-
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
 }
