--- a/feature-translate/build.gradle
+++ b/feature-translate/build.gradle
@@ -30,9 +30,9 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"
     annotationProcessor "com.google.dagger:dagger-android-processor:${dagger_version}"
 
-    implementation "io.reactivex.rxjava2:rxjava:${rx_java_version}"
-    implementation "io.reactivex.rxjava2:rxandroid:${rx_android_version}"
-    implementation "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:${rx_binding_version}"
+    implementation "io.reactivex.rxjava3:rxjava:${rx_java_version}"
+    implementation "io.reactivex.rxjava3:rxandroid:${rx_android_version}"
+    implementation "com.jakewharton.rxbinding4:rxbinding-appcompat:${rx_binding_version}"
 
     implementation "ru.terrakok.cicerone:cicerone:${cicerone_version}"
 }
