--- a/repository-remote/build.gradle
+++ b/repository-remote/build.gradle
@@ -11,6 +11,7 @@ android {
         buildToolsVersion build_tools_version
 
         // define your own Yandex_api_key in gradle.properties (https://tech.yandex.ru/translate/doc/dg/concepts/api-keys-docpage/)
+        def yandex_api_key = '"XXXX-YYYY"'
         println "Yandex ApiKey: $yandex_api_key"
         buildConfigField 'String', "ApiKey", yandex_api_key
 
@@ -33,5 +34,5 @@ dependencies {
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation "com.google.code.gson:gson:${gson_version}"
 
-    implementation "io.reactivex.rxjava2:rxjava:${rx_java_version}"
+    implementation "io.reactivex.rxjava3:rxjava:${rx_java_version}"
 }
