--- a/resources/build.gradle
+++ b/resources/build.gradle
@@ -20,8 +20,8 @@ android {
 dependencies {
     implementation project(path: ':common')
 
-    implementation "com.android.support:appcompat-v7:${support_lib_version}"
-    implementation "com.android.support:design:${support_lib_version}"
+    implementation "androidx.appcompat:appcompat:${material_version}"
+    implementation "com.google.android.material:material:${material_version}"
 
     implementation "com.google.dagger:dagger:${dagger_version}"
 }
