--- a/build.gradle
+++ b/build.gradle
@@ -12,14 +12,16 @@ ext {
 
     build_tools_version = '28.0.3'
     support_lib_version = '28.0.0'
-    constraint_version = '1.1.1'
+    constraint_version = '1.1.3'
     arch_components_version = '1.1.1'
-    roomVersion = '1.1.1'
+    room_version = '2.2.5'
+    material_version = '1.1.0'
+    lifecycle_version = '2.2.0'
 
     dagger_version = '2.28'
     retrofit_version = '2.1.0'
-    okhttp3_version = '3.4.1'
-    gson_version = '2.8.1'
+    okhttp3_version = '3.14.7'
+    gson_version = '2.8.6'
 
     rx_java_version = '3.0.4'
     rx_android_version = '3.0.0'
@@ -31,10 +33,10 @@ ext {
     javax_annotation_version = '1.0'
     javax_inject_version = '1'
 
-    junit_version = '4.12'
-    mockito_version = '1.10.19'
+    junit_version = '4.13'
+    mockito_version = '2.19.0'
     robolectric_version = '3.5'
-    asserj_version = '2.9.1'
+    asserj_version = '3.10.0'
 }
 
 buildscript {
