--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,8 @@ org.gradle.daemon=true
 org.gradle.caching=true
 kotlin.incremental=true
 enableProGuardFlag=false
+android.useAndroidX=true
+android.enableJetifier=true
+
+# define your own Yandex_api_key in gradle.properties (https://tech.yandex.ru/translate/doc/dg/concepts/api-keys-docpage/)
+yandex_api_key = '"XXXX-YYYY"'
