--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,10 @@ android {
         targetCompatibility java_version
     }
 
+    kotlinOptions {
+        jvmTarget = kotlin_jvm_version
+    }
+
     sourceSets {
         test.java.srcDirs += 'src/test/kotlin'
     }
@@ -53,17 +57,17 @@ dependencies {
     implementation project(path: ':feature-history')
     implementation project(path: ':feature-favorites')
 
-    implementation "com.android.support:appcompat-v7:${support_lib_version}"
-    implementation "com.android.support:design:${support_lib_version}"
-    implementation "com.android.support.constraint:constraint-layout:${constraint_version}"
-    implementation "android.arch.lifecycle:extensions:${arch_components_version}"
+    implementation "androidx.appcompat:appcompat:${material_version}"
+    implementation "com.google.android.material:material:${material_version}"
+    implementation "androidx.constraintlayout:constraintlayout:${constraint_version}"
+    implementation "androidx.lifecycle:lifecycle-extensions:${lifecycle_version}"
 
     compileOnly "com.google.dagger:dagger-android-support:${dagger_version}"
     annotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"
     annotationProcessor "com.google.dagger:dagger-android-processor:${dagger_version}"
 
-    implementation "io.reactivex.rxjava2:rxjava:${rx_java_version}"
-    implementation "io.reactivex.rxjava2:rxandroid:${rx_android_version}"
+    implementation "io.reactivex.rxjava3:rxjava:${rx_java_version}"
+    implementation "io.reactivex.rxjava3:rxandroid:${rx_android_version}"
 
     implementation "ru.terrakok.cicerone:cicerone:${cicerone_version}"
 
