--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 ext {
     java_version = JavaVersion.VERSION_1_8
-    kotlin_version = '1.3.50'
+    kotlin_version = '1.3.72'
     kotlin_jvm_version = '1.8'
 
     compileSdk = 28
@@ -12,18 +12,20 @@ ext {
 
     build_tools_version = '28.0.3'
     support_lib_version = '28.0.0'
-    constraint_version = '1.1.1'
+    constraint_version = '1.1.3'
     arch_components_version = '1.1.1'
-    roomVersion = '1.1.0'
+    room_version = '2.2.5'
+    material_version = '1.1.0'
+    lifecycle_version = '2.2.0'
 
-    dagger_version = '2.16'
-    retrofit_version = '2.1.0'
-    okhttp3_version = '3.4.1'
-    gson_version = '2.8.1'
+    dagger_version = '2.28'
+    retrofit_version = '2.9.0'
+    okhttp3_version = '3.14.7'
+    gson_version = '2.8.6'
 
-    rx_java_version = '2.1.5'
-    rx_android_version = '2.0.2'
-    rx_binding_version = '2.1.1'
+    rx_java_version = '3.0.4'
+    rx_android_version = '3.0.0'
+    rx_binding_version = '4.0.0'
 
     cicerone_version = '3.0.0'
     timber_version = '4.7.0'
@@ -31,10 +33,10 @@ ext {
     javax_annotation_version = '1.0'
     javax_inject_version = '1'
 
-    junit_version = '4.12'
-    mockito_version = '1.10.19'
+    junit_version = '4.13'
+    mockito_version = '2.19.0'
     robolectric_version = '3.5'
-    asserj_version = '2.9.1'
+    asserj_version = '3.10.0'
 }
 
 buildscript {
@@ -46,7 +48,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.android.tools.build:gradle:4.0.0'
     }
 }
 
