--- a/repository-remote/build.gradle
+++ b/repository-remote/build.gradle
@@ -10,7 +10,6 @@ android {
         minSdkVersion minSdk
         buildToolsVersion build_tools_version
 
-        // define your own Yandex_api_key in gradle.properties (https://tech.yandex.ru/translate/doc/dg/concepts/api-keys-docpage/)
         println "Yandex ApiKey: $yandex_api_key"
         buildConfigField 'String', "ApiKey", yandex_api_key
 
@@ -30,8 +29,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:${okhttp3_version}"
     implementation "com.squareup.retrofit2:retrofit:${retrofit_version}"
     implementation "com.squareup.retrofit2:converter-gson:${retrofit_version}"
-    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    implementation "com.squareup.retrofit2:adapter-rxjava3:${retrofit_version}"
     implementation "com.google.code.gson:gson:${gson_version}"
 
-    implementation "io.reactivex.rxjava2:rxjava:${rx_java_version}"
+    implementation "io.reactivex.rxjava3:rxjava:${rx_java_version}"
 }
