--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 
 # define your own Yandex_api_key in gradle.properties (https://tech.yandex.ru/translate/doc/dg/concepts/api-keys-docpage/)
-yandex_api_key = '"XXXX-YYYY"'
+# yandex_api_key = '"XXXX-YYYY"'
