--- a/build.gradle
+++ b/build.gradle
@@ -1,42 +1,39 @@
 ext {
-    java_version = JavaVersion.VERSION_1_8
-    kotlin_version = '1.3.72'
-    kotlin_jvm_version = '1.8'
+    java_version = JavaVersion.VERSION_11
+    kotlin_version = '1.5.21'
+    kotlin_jvm_version = JavaVersion.VERSION_11
 
-    compileSdk = 28
-    targetSdk = 28
-    minSdk = 21
-
+    pCompileSdk = 30
+    pTargetSdk = 30
+    pMinSdk = 21
     pVersionCode = 1
     pVersionName = "0.1"
 
     build_tools_version = '28.0.3'
-    support_lib_version = '28.0.0'
-    constraint_version = '1.1.3'
+    constraint_version = '2.1.0'
     arch_components_version = '1.1.1'
     room_version = '2.2.5'
-    material_version = '1.1.0'
+    material_version = '1.3.0'
     lifecycle_version = '2.2.0'
 
-    dagger_version = '2.28'
+    dagger_version = '2.35.1'
     retrofit_version = '2.9.0'
     okhttp3_version = '3.14.7'
     gson_version = '2.8.6'
 
-    rx_java_version = '3.0.4'
+    rx_java_version = '3.0.13'
     rx_android_version = '3.0.0'
     rx_binding_version = '4.0.0'
 
-    cicerone_version = '3.0.0'
+    cicerone_version = '7.1'
     timber_version = '4.7.0'
 
     javax_annotation_version = '1.0'
     javax_inject_version = '1'
 
-    junit_version = '4.13'
+    junit_version = '4.13.1'
     mockito_version = '2.19.0'
-    robolectric_version = '3.5'
-    asserj_version = '3.10.0'
+    asserj_version = '3.19.0'
 }
 
 buildscript {
@@ -48,13 +45,15 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath 'com.android.tools.build:gradle:7.0.1'
     }
 }
 
 allprojects {
     repositories {
-        jcenter()
+        mavenCentral()
+//        maven { url = uri("https://jitpack.io") }
+//        maven { url = uri("https://kotlin.bintray.com/kotlinx/") }
         google()
     }
 }
