--- a/feature-translate/build.gradle
+++ b/feature-translate/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     implementation "com.jakewharton.rxbinding4:rxbinding-appcompat:${rx_binding_version}"
 
     implementation "com.github.terrakok:cicerone:${cicerone_version}"
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
 }
