--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,9 +62,7 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:${constraint_version}"
     implementation "androidx.lifecycle:lifecycle-extensions:${lifecycle_version}"
 
-    compileOnly "com.google.dagger:dagger-android-support:${dagger_version}"
-    annotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"
-    annotationProcessor "com.google.dagger:dagger-android-processor:${dagger_version}"
+    implementation "javax.inject:javax.inject:${javax_inject_version}"
 
     implementation "io.reactivex.rxjava3:rxjava:${rx_java_version}"
     implementation "io.reactivex.rxjava3:rxandroid:${rx_android_version}"
@@ -78,4 +76,6 @@ dependencies {
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+
+    implementation "io.insert-koin:koin-android:$koin_version"
 }
