--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,11 @@ ext {
     build_tools_version = '28.0.3'
     constraint_version = '2.1.0'
     arch_components_version = '1.1.1'
-    room_version = '2.2.5'
+    room_version = '2.3.0'
     material_version = '1.3.0'
     lifecycle_version = '2.2.0'
 
+    koin_version = '3.1.2'
     dagger_version = '2.35.1'
     retrofit_version = '2.9.0'
     okhttp3_version = '3.14.7'
@@ -37,6 +38,8 @@ ext {
 }
 
 buildscript {
+
+
     repositories {
         google()
         maven {
@@ -54,7 +57,4 @@ allprojects {
         mavenCentral()
         google()
     }
-
-
-
 }
