--- a/common/build.gradle
+++ b/common/build.gradle
@@ -24,3 +24,8 @@ dependencies {
     api "com.jakewharton.timber:timber:${timber_version}"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
 }
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+}
