--- a/feature-select-language/build.gradle
+++ b/feature-select-language/build.gradle
@@ -24,9 +24,10 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:${constraint_version}"
     implementation "androidx.lifecycle:lifecycle-extensions:${lifecycle_version}"
 
-    implementation "com.google.dagger:dagger-android-support:${dagger_version}"
-    annotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"
-    annotationProcessor "com.google.dagger:dagger-android-processor:${dagger_version}"
+//    implementation "com.google.dagger:dagger-android-support:${dagger_version}"
+//    annotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"
+//    annotationProcessor "com.google.dagger:dagger-android-processor:${dagger_version}"
+    implementation "javax.inject:javax.inject:${javax_inject_version}"
 
     implementation "io.reactivex.rxjava3:rxjava:${rx_java_version}"
     implementation "io.reactivex.rxjava3:rxandroid:${rx_android_version}"
