--- a/feature-translate/build.gradle
+++ b/feature-translate/build.gradle
@@ -1,4 +1,15 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
 
 android {
     defaultConfig {
@@ -25,9 +36,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:${lifecycle_version}"
 
 
-    implementation "com.google.dagger:dagger-android-support:${dagger_version}"
-    annotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"
-    annotationProcessor "com.google.dagger:dagger-android-processor:${dagger_version}"
+//    implementation "com.google.dagger:dagger-android-support:${dagger_version}"
+//    annotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"
+//    annotationProcessor "com.google.dagger:dagger-android-processor:${dagger_version}"
+    implementation "javax.inject:javax.inject:${javax_inject_version}"
 
     implementation "io.reactivex.rxjava3:rxjava:${rx_java_version}"
     implementation "io.reactivex.rxjava3:rxandroid:${rx_android_version}"
@@ -36,4 +48,7 @@ dependencies {
     implementation "com.github.terrakok:cicerone:${cicerone_version}"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+
+    implementation "io.insert-koin:koin-android:$koin_version"
+
 }
