--- a/repository-remote/gradle.properties
+++ b/repository-remote/gradle.properties
@@ -3,4 +3,4 @@
 # You can obtain your own key here:
 # https://tech.yandex.ru/translate/doc/dg/concepts/api-keys-docpage/
 # example:
-# yandex_api_key="trnsl.1.1.20180425T102139767.96e99dc90d3a9128c85bddfaeea265ef4"
+# yandex_api_key="xxx-yyy-zzz"
