--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,20 +62,15 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:${constraint_version}"
     implementation "androidx.lifecycle:lifecycle-extensions:${lifecycle_version}"
 
-    implementation "javax.inject:javax.inject:${javax_inject_version}"
-
     implementation "io.reactivex.rxjava3:rxjava:${rx_java_version}"
     implementation "io.reactivex.rxjava3:rxandroid:${rx_android_version}"
 
     implementation "com.github.terrakok:cicerone:${cicerone_version}"
-
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_vesrion"
+    implementation "io.insert-koin:koin-android:$koin_version"
 
     testImplementation "junit:junit:${junit_version}"
     testImplementation "org.mockito:mockito-core:${mockito_version}"
     testImplementation "org.assertj:assertj-core:${asserj_version}"
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
-
-    implementation "io.insert-koin:koin-android:$koin_version"
 }
