--- a/feature-translate/build.gradle
+++ b/feature-translate/build.gradle
@@ -35,20 +35,10 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:${constraint_version}"
     implementation "androidx.lifecycle:lifecycle-extensions:${lifecycle_version}"
 
-
-//    implementation "com.google.dagger:dagger-android-support:${dagger_version}"
-//    annotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"
-//    annotationProcessor "com.google.dagger:dagger-android-processor:${dagger_version}"
-    implementation "javax.inject:javax.inject:${javax_inject_version}"
-
-    implementation "io.reactivex.rxjava3:rxjava:${rx_java_version}"
-    implementation "io.reactivex.rxjava3:rxandroid:${rx_android_version}"
-    implementation "com.jakewharton.rxbinding4:rxbinding-appcompat:${rx_binding_version}"
-
-    implementation "com.github.terrakok:cicerone:${cicerone_version}"
-
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
 
     implementation "io.insert-koin:koin-android:$koin_version"
+
 
 }
