--- a/repository-remote/build.gradle
+++ b/repository-remote/build.gradle
@@ -32,16 +32,10 @@ android {
 dependencies {
     implementation project(path: ':common')
 
-//    implementation "com.google.dagger:dagger:${dagger_version}"
-//    annotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"
-    implementation "javax.inject:javax.inject:${javax_inject_version}"
-
-    implementation "com.squareup.okhttp3:logging-interceptor:${okhttp3_version}"
-    implementation "com.squareup.retrofit2:retrofit:${retrofit_version}"
-    implementation "com.squareup.retrofit2:converter-gson:${retrofit_version}"
-//    implementation "com.squareup.retrofit2:adapter-rxjava3:${retrofit_version}"
-    implementation "com.google.code.gson:gson:${gson_version}"
-
-//    implementation "io.reactivex.rxjava3:rxjava:${rx_java_version}"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp3_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.google.code.gson:gson:$gson_version"
     implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_vesrion"
 }
