--- a/repository-remote/build.gradle
+++ b/repository-remote/build.gradle
@@ -37,5 +37,5 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.google.code.gson:gson:$gson_version"
     implementation "io.insert-koin:koin-android:$koin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_vesrion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
 }
