--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 ext {
     java_version = JavaVersion.VERSION_11
-    kotlin_version = '1.5.21'
+    kotlin_version = '1.5.30'
     kotlin_jvm_version = JavaVersion.VERSION_11
 
     pCompileSdk = 30
@@ -25,7 +25,7 @@ ext {
     rx_java_version = '3.0.13'
     rx_android_version = '3.0.0'
     rx_binding_version = '4.0.0'
-    coroutine_vesrion = '1.5.0'
+    coroutine_version = '1.5.0'
 
     cicerone_version = '7.1'
     timber_version = '4.7.0'
