--- a/common/build.gradle
+++ b/common/build.gradle
@@ -22,7 +22,8 @@ dependencies {
     implementation "javax.inject:javax.inject:${javax_inject_version}"
 
     api "com.jakewharton.timber:timber:${timber_version}"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
 }
 
 java {
