--- a/feature-select-language/build.gradle
+++ b/feature-select-language/build.gradle
@@ -1,4 +1,16 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
 
 android {
     defaultConfig {
@@ -24,11 +36,10 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:${constraint_version}"
     implementation "androidx.lifecycle:lifecycle-extensions:${lifecycle_version}"
 
-//    implementation "com.google.dagger:dagger-android-support:${dagger_version}"
-//    annotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"
-//    annotationProcessor "com.google.dagger:dagger-android-processor:${dagger_version}"
-    implementation "javax.inject:javax.inject:${javax_inject_version}"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
 
-    implementation "io.reactivex.rxjava3:rxjava:${rx_java_version}"
-    implementation "io.reactivex.rxjava3:rxandroid:${rx_android_version}"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+
+    implementation "io.insert-koin:koin-android:$koin_version"
 }
