--- a/feature-translate/build.gradle
+++ b/feature-translate/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:${constraint_version}"
     implementation "androidx.lifecycle:lifecycle-extensions:${lifecycle_version}"
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
 
     implementation "io.insert-koin:koin-android:$koin_version"
