--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,26 +1,16 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
 
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-}
-
 sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
 }
 
 dependencies {
-    api "com.jakewharton.timber:timber:${timber_version}"
+    implementation "com.jakewharton.timber:timber:$timber_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = java_version
+    targetCompatibility = java_version
 }
